corporate policies whitespace issue

--- a/blocks/corporatepolicies/corporatepolicies.css
+++ b/blocks/corporatepolicies/corporatepolicies.css
@@ -82,7 +82,7 @@
         padding: 32px 0;
     }
     .corporate-policies-list-item {
-        padding: 36px 0px;
+        padding: 24px 0px;
     }
     .corporate-policies-list-item .left-col h2{
         font-size: var(--font-size-m);
@@ -101,5 +101,9 @@
     .corporate-policies-list-item .right-col > div:nth-child(3) a {
         font-size: var(--font-size-xs);
         line-height: 20px;
+    }
+    .corporate-policies-list>div:last-child{
+        padding-bottom: 24px;
+        padding-left: 0px;
     }
 }
